[package]
name = "hyperion-eosio-rust"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
serde_stacker = "0.1.12"
tokio = { version = "1.0.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
serde_json = { version = "1.0.140", features = ["unbounded_depth"] }
sys-info="0.9.1"
clap = "4.5.40"
crossbeam = "0.8.4"
eosio-shipper-gf = { version ="0.1.3", path = "../eosio-shipper" }
futures-util = "0.3"
url = "2.5"
error-chain = "0.12"
rs_abieos = { version = "0.1.5", path = "../rs-abieos" }
antelope-client = "0.2.0"
byteorder = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12", features = ["rustls-tls"] }

elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = ["rustls-tls","native-tls"] }
log = "0.4.27"
rayon = "1.10.0"
